Ajustes Registro Producto y Detalles FE