@@ -13,7 +13,9 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 
 @Builder
@@ -42,13 +44,16 @@ public class User implements UserDetails {
     private UserRole userRole;
     @OneToMany(mappedBy = "user")
 //    @Schema(hidden = true)
-    private List<UserFav> fav;
+    private Set<UserFav> fav;
 
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        Role role = userRole.getRole();
-        return List.of(new SimpleGrantedAuthority(role.getRole()));
+        if (userRole != null && userRole.getRole() != null) {
+            return List.of(new SimpleGrantedAuthority(userRole.getRole().getRole()));
+        } else {
+            return Collections.emptyList();
+        }
     }
 
     @Override
@@ -74,5 +79,17 @@ public class User implements UserDetails {
     @Override
     public boolean isEnabled() {
         return isActive;
+    }
+
+    @Override
+    public String toString() {
+        return "User{" +
+                "id=" + id +
+                ", isActive=" + isActive +
+                ", name='" + name + '\'' +
+                ", lastName='" + lastName + '\'' +
+                ", email='" + email + '\'' +
+                ", password='" + password + '\'' +
+                '}';
     }
 }
